--- a/src/js/pages/songbird/components/playInfoSide/playInfoSide.scss
+++ b/src/js/pages/songbird/components/playInfoSide/playInfoSide.scss
@@ -15,6 +15,7 @@
 }
 .songBird-current-bird-info{
     display: flex;
+    justify-content: space-around;
     height: 100%;
     border-radius: .25rem;
     background-color: #1f1809;
@@ -29,4 +30,9 @@
 .list-group-item.active{
     background-color:rgba(255, 140, 0, 0.7);
     border-color:rgba(255, 140, 0, 0.7);
+}
+.songbird-info-player{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
 }
