--- a/src/js/pages/songbird/components/currentBird/currentBird.scss
+++ b/src/js/pages/songbird/components/currentBird/currentBird.scss
@@ -11,9 +11,11 @@
     margin: 10px;
 }
 .songbird-currentbird{
+    border: 1px solid rgba(255, 140, 0, 0.7);
+    border-radius: 5px;
     width: 120px;
     height: 120px;
-    background: linear-gradient(180deg,rgba(8,15,26,.59),rgba(17,17,46,.46)), url("../../../../../assets/png/sticker_vk_wwf_012.png");
+    background: url("../../../../../assets/png/sticker_vk_wwf_012.png");
     background-size: cover;
 }
 .songbird-current-info{
