feat: answer color indicator

--- a/src/js/pages/songbird/components/playInfoSide/playInfoSide.scss
+++ b/src/js/pages/songbird/components/playInfoSide/playInfoSide.scss
@@ -37,3 +37,15 @@
     width: 50%;
     margin: 5px;
 }
+.false{
+    color: rgb(153, 15, 15) !important;
+}
+.true{
+    color: #28a745 !important;
+}
+.songbird-information-block{
+    color: rgba(255, 140, 0, 0.7);
+}
+.songBird-current-bird-info{
+    color: rgba(255, 140, 0, 0.7); 
+}
