feat: database, css fix, audio declaration

--- a/src/js/pages/songbird/components/header/header.scss
+++ b/src/js/pages/songbird/components/header/header.scss
@@ -1,6 +1,7 @@
 .songbird-header{
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 .songbird-header div {
