--- a/src/js/pages/songbird/components/currentBird/currentBird.scss
+++ b/src/js/pages/songbird/components/currentBird/currentBird.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
     width: 90%;
     background-color: rgb(31, 24, 9);
     border-radius: 5px;
@@ -105,4 +106,41 @@
 }
 .form-control-range{
     width: 100px;
+}
+.songbird-birds-container{
+    min-width: 310px;
+    width: 30%;
+    margin: 5px;
+}
+.songBird-current-bird-info-container{
+    min-width: 310px;
+    width: 60%;
+    margin: 5px;
+}
+.songbird-PlayInfoSide{
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+}
+.songBird-current-bird-info p{
+    text-align: center;
+    width: 90%;
+}
+.songBird-current-bird-info{
+    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+}
+@media (max-width: 825px) {
+    .songbird-birds-container{
+        width: 90%;
+    }
+    .songBird-current-bird-info-container{
+        width: 90%;
+    }
+}
+@media (max-width: 399px){
+    .songbird-info-player{
+        width: 100% !important;
+    }
 }
