--- a/src/js/pages/songbird/components/playInfoSide/playInfoSide.scss
+++ b/src/js/pages/songbird/components/playInfoSide/playInfoSide.scss
@@ -45,6 +45,11 @@
 }
 .songbird-information-block{
     color: rgba(255, 140, 0, 0.7);
+    font-size: 0.8rem;
+    padding: 6px;
+    margin: 2px;
+    border: 1px solid black;
+    border-radius: 2px;
 }
 .songBird-current-bird-info{
     color: rgba(255, 140, 0, 0.7); 
